# TGbot

./: CMakeLists.txt  main.cpp
Soci/examples/connect/: CMakeLists.txt
include/: BotHandling.h  DataBase.h  Queries.h
src/: BotHandling.cpp  DataBase.cpp
tgbot-cpp/: CMakeLists.txt
